# overseer

./: .gitignore  PERCEPTION_ROADMAP.md  README.md  README_CN.md  RE_ROADMAP.md  ROADMAP.md  ROADMAP_MEMORY.md  config.cp.yaml  imdb_fallout_summary.md  overseer.spec  pyproject.toml  release.sh  retro_cogos.spec  start.sh
ceo/: __init__.py  __main__.py  config.py  database.py  logging_config.py
ceo/core/: protocols.py
ceo/models/: __init__.py  artifact.py  cognitive_object.py  execution.py  memory.py
ceo/services/: artifact_service.py  cognitive_object_service.py  context_service.py  execution_service.py  llm_service.py  memory_service.py  tool_service.py
ceo/tui/: app.py  theme.py
overseer/: __init__.py  __main__.py  cli.py  config.cp.yaml  config.py  database.py  logging_config.py
overseer/core/: plugin_protocols.py  protocols.py
overseer/kernel/: __init__.py  firewall_engine.py  perception_bus.py  registry.py
overseer/models/: __init__.py  artifact.py  cognitive_object.py  execution.py  memory.py
overseer/services/: artifact_service.py  cognitive_object_service.py  context_service.py  execution_service.py  llm_service.py  memory_extractor.py  memory_service.py  planning_service.py  tool_service.py
overseer/tui/: app.py  theme.py
retro_cogos/: __init__.py  __main__.py  cli.py  config.cp.yaml  config.py  database.py  logging_config.py
retro_cogos/core/: enums.py  plugin_protocols.py  (+1 more)
tests/: conftest.py  test_artifacts.py  test_context.py  test_memory.py  test_models.py  test_perception.py  test_services.py  test_tools.py  test_tui.py
(+53 files in other folders)
