[project]
name = "overseer"
version = "0.1.0"
description = "Overseer — AI Action Firewall"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "click>=8.0",
]

[project.scripts]
overseer = "overseer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["overseer"]
